--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -1,5 +1,5 @@
 <% @projects.each do |project| %>
-  <div class="project" id="<#%= project.id %>">
+  <div class="project" id="<%= project.id %>">
     <div class="project_block">
       <image src="/assets/notepad.gif">
       <span class="project_name"><%= project.title %></span>
