fix clear task date and create project

--- a/app/views/projects/create.js.erb
+++ b/app/views/projects/create.js.erb
@@ -1,4 +1,5 @@
 $(".projects").html("<%= escape_javascript(render 'projects') %>");
+$('.add_todolist_text').val('');
 $('.new_project').hide();
 $(".task_list").sortable({
     items: 'li',
