--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -2,7 +2,7 @@ $('.new_task').bind('ajax:success', function() {
   $(this).parents('.project').find('.task_list').html("<%= escape_javascript(render 'tasks', project: @project) %>");
   taskDate = $(this).parents('.project').find('.task_input_date');
   taskName = $(this).parents('.project').find('.task_input_text');
-  if(taskName.val().trim().length && taskName.val().length) {
+  if(taskName.val().length && taskDate.val().length) {
     taskName.val('');
     taskDate.val('');
   };
